[gd_scene load_steps=2 format=3 uid="uid://cobcn00385rbl"]

[ext_resource type="Script" path="res://Scene/Components/shield_generator.gd" id="1_847ug"]

[node name="ShieldGenerator" type="Node3D"]
script = ExtResource("1_847ug")

[node name="RechargeDelay" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="RechargeTick" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2

[connection signal="timeout" from="RechargeDelay" to="." method="_on_recharge_delay_timeout"]
[connection signal="timeout" from="RechargeTick" to="." method="_on_recharge_tick_timeout"]
